--- a/Capitulos/preliminares.tex
+++ b/Capitulos/preliminares.tex
@@ -2,6 +2,9 @@
 
 Para el trabajo que se presentará en preciso poder dar una base que más adelante será útil  en su momento para poder expandir sobre estás ideas en el momento. Con estos preliminares se espera poder poner a los lectores en un mismo contexto. Dado los temas que se trataran se debe dar una explicación sobre la mecánica estadística y un poco de la visión de la mecánica cuántica que es usada en la teoría cuántica de la información. se repasarán algunos puntos importantes para la exposición y se verán algunos problemas que tienen los fundamentos de la mecánica estadística. Por la parte de la cuántica se dará la versión de operadores de densidad  que por lo general no se explica mucho, anexo se hablara de conceptos como el entrelazamiento y un poco la idea de decoherencia.
 
+
+\section{mecánica cuántica}
+La mecánica cuántica que por lo general se enseña es la que se empieza con la ecuación de Schrödinger en esta perspectiva los efecto cuánticos salen por probabilidades, pero estas probabilidades son habladas sobre un "ensamble" de sistemas físicos exactamente preparados. O sea las probabilidades que generalmente son usadas en la cuántica son habladas desde la perspectiva de repetir el experimento de un misma manera varias veces siendo este preparado exactamente todas las veces. Pero la mecánica cuántica en esta situaciones habla de que se puede describir todos los miembros del mismo estado por un $\ket{\phi}$ qué pasa si se tiene ensambles de sistemas físicos que son descritos con varios estados, que $30%$ del ensamble se describan por $\ket{\phi}$ y el $70%$ se describa por $\ket{\Phi}$. 
 \section{mecánica estadística}
 La mecánica clásica ha tenido desde sus inicio varios puntos fuertes, ha ganado el puesto como una teoría bastante buena. Pero como ya se sabe esta teoría tiene bastantes limitaciones en el régimen microscópico no llega a ser la teoría que funciona. Ahora para otras propiedades físicas no se puede extender la mecánica clásica de manera sencilla la termodinámica fue una nueva área que surgió y la mecánica como se conocía desde Newton no fue tan 
 sencilla ni obvia de aplicar. La termodinámica toma sistemas de muchas partículas ...
@@ -66,8 +69,12 @@ Una posible solución a la ecuación anterior es que $\rho_{eq}(p,q)=\rho(H(p,q)
 La consecuencia anterior respondería la pregunta de cómo definir equilibrio para partículas en movimiento. Pero para saber si todos los sistemas evolucionan naturalmente al equilibrio  y justificar el supuesto básico de la mecánica estadística se debe mostrar que densidades no estacionarias se van acercando a densidades estacionarias $\rho_{eq}$. Pero esto entra en un problema con la primera consecuencia (inversión temporal), dado una densidad $\rho(t)$ que se acerque a $\rho_{eq}$ habrá otra dada la inversión temporal que se estará alejando de esta densidad de equilibrio. Lo que se ha propuesto normalmente es mostrar que $\rho(t)$ se encontrará en el intervalo cercano a $\rho_{eq}$ una gran parte del tiempo, esto significa que los promedios temporales están dominados por la solución estacionaria. Esta pregunta nos lleva al problema de ergodicidad, ¿es válido igualar el promedio temporal con el promedio de ensamble?.
 
 \subsection{Ergodicidad}
-En esta sección se hablará un poco sobre el problema de ergodicidad, se planteará las dificultades y se verán las soluciones que se han dado para este. Se toca este tema para luego poder ver las soluciones dadas por (Popescu et al. 20..) cómo vuelven inexistente este problema.
+En esta sección se hablará un poco sobre el problema de ergodicidad, se planteará las dificultades y se verán algunas soluciones que se han dado para este problema. Se toca este tema para luego poder ver las soluciones dadas por (Popescu et al. 20..) cómo vuelven inexistente este problema y los problemas que llegan a saltarse sin realmente tener que resolverlos.
+La mecánica estadística tiene como base el principio de probabilidades iguales generalmente en la literatura siempre se empieza hablando de cómo se acepta el principio desde una vista de la teoría de probabilidad. Pero hay un concepto que no es profundizado en los textos y es el por qué se debe introducir la probabilidad en estos casos. Libros como (Landau, Lifshitz) empiezan explicando cómo se manejaría un problema de muchas partículas desde la forma clásica, la idea que muestra es que poder describir avogadro número de partículas es complicado porque aunque se  tenga las ecuaciones y se pueda de alguna forma (numérica o computacional) de resolver todas las ecuaciones que salen sería imposible llegar a darle condiciones iniciales al problema. Entonces Landau explica que para resolver el problema se tiene en cuenta que la complejidad de la interacciones que hay entre el sistema que se estudia y el ambiente, hace que el sistema se encuentre en muchos estado varias veces, esto da un comportamiento probabilístico al sistema que puede llegar a comportarse como uno aislado.
+Con esto Landau introduce las probabilidades al sistema sin tener que entrar en un conflicto con la mecánica clásica, nótese que dada esa explicación Landau sigue a formalizar lo dicho y construye la mecánica estadística que se conoce generalmente.Pero hay otra forma de introducir las probabilidades a estos sistemas de muchos grados de libertad y es por hipótesis, en el libro de Khinchin sigue esta filosofía.
+La hipótesis de ergodicidad postula que el promedio temporal de una cantidad física de un sistema aislado es igual al promedio del ensamble.\\
 
+Dada una teoría que explique algún fenómeno que nos interese que querrá probar que tan buenos resultados se obtienen de ella. Para esto se comparará con el experimento pero las cantidades físicas en un teoría aparecen como funciones de las variables dinámicas. Pero ya se ve un problema claro en este procedimiento cómo se puede comprar los datos medidos en el laboratorio con las funciones de la teoría; las funciones de las variables dinámicas toman valores diferentes para varios estados del sistema pero para poder comparar los resultados experimentales se debería saber cuál es el estado del sistema o sea dar todas las variables dinámicas para poder así estar seguros que se está comparando los datos con el estado específico. Pero en el caso de un gas sería imposible poder saber todas las posiciones y momentos. Pero hay un punto en este caso y es que al medir una cantidad física esta no se observa de manera instantánea, se demora algún tiempo $\tau$ para poder observarla. En el caso de una cantidad termodinámica como la temperatura el tiempo en que se demora midiendo va desde $\tau_{0}$ que es el tiempo necesario para que no hayan correlaciones del movimiento molecular y  $\tau_{m}$ que es el tiempo máximo en el que la propiedad macroscópica que se mide no cambia. Por ejemplo la temperatura al medirla se necesita esperar un tiempo $\tau_{0}$ par que se estabilice el sistema y el termómetro y la medición se puede tomar hasta $\tau_{m}$ cuando el sistema se vuelva a perturbar. Cualquier cantidad que se mida durante este intervalo se supone que no debe depender de $\tau$ en algunos sistemas que llegan al equilibrio $\tau_{m}$ puede extenderse al infinito.
 
 
 
